# haskell_learning

./: loose_ends.md  scotty.hs  useful_libraries.md
12_signaling_adversity/: notes.txt
14_testing/: generatorExamples.hs  notes.txt
15_monoid_semigroup/: madlibbin.hs  notes.txt  optional.hs  quickcheck_assoc.hs
16_functor/: 16.10-exercises.hs  16.11.hs  16.13-wrap.hs  16.17-exercises.hs  16.7-exercises.hs  functorLaws.hs  notes.txt
17_Applicative/: .lookup-ex.hs.un~  17.5.hs  constant.hs  exercises.hs  fixerUpper.hs  identity.hs  list_applicative.hs  lookup-ex.hs  notes.txt
18_Monad/: bind.hs  eitherMonad.hs  exercises.hs  maybeMonad.hs  monadCheckers.hs  notes.txt  sayHi.hs  twiceWhenEven.hs
19_applying_structure/: applUtil.hs  network.hs  notes.md  notes.txt  offsetTime.hs  scotty.hs  uuid.hs  xmonad.hs
20_foldable/: .MySum.hs.swp  MySum.hs  exercises.hs  libraryImps.hs  notes.md
21_traversable/: HttpStuff.hs  exercises.hs  notes.md
22_reader/: ask.hs  exercises.hs  intro.hs  notes.md  warmup.hs
23_state/: FizzBuzz.hs  MyState.hs  RandomExample.hs  RandomExample2.hs  exercises.hs  notes.md
24_parser_combinators/: AltParsing.hs  BT.hs  Exercises.hs  Fractions.hs  Ini.hs  IntEofParse.hs  LearnParsers.hs  Marshalling.hs  TokenizedInts.hs  TryTry.hs  notes.md  teensy.ini
25_composing_types/: BifunctorInstances.hs  ComposeInstances.hs  CouldFail.hs  IdentityT.hs  notes.md
26_monad_transformers/: EitherT.hs  Exercises.hs  FixTheCode.hs  HitCounter.hs  Identity.hs  MaybeT.hs  Morra.hs  RDec.hs  RPrintAndInc.hs  (+7 more)
second_try/14_testing/morse/: morse.cabal
second_try/14_testing/morse/src/: Morse.hs
testing/addition/: addition.cabal
testing/addition/.stack-work/install/x86_64-linux/lts-11.12/8.2.2/flag-cache/: QuickCheck-2.10.1-4Os66uOJMCzBKiZgTbIvyk  ansi-terminal-0.8.0.4-H5HxnxNyY9rFpSVgr55Piv  hspec-discover-2.4.8-LTGHxW3iGukBkZGh8Wfshc  hspec-expectations-0.8.2-u0Nf5sZGE0ADGpjIcTPpI
testing/addition/.stack-work/install/x86_64-linux/lts-11.12/8.2.2/lib/x86_64-linux-ghc-8.2.2/addition-0.1.0.0-FTQppaUjjp9Lqd3aZMnd3n/: Addition.dyn_hi  Addition.hi
(+244 files in other folders)
